<resources>
    <string name="app_name">B07_Project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register">Sign up</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm password</string>
    <string name="identity_student_or_admin">Identity:Student or Admin</string>
    <string name="login">Login</string>
    <string name="name"> Name: </string>
    <string name="element_text">Test string for recyclerView</string>
    <string name="Ann">Announcement\n</string>
    <string name="title_feed">Feedback\n</string>
    <string name="title_event">Event\n</string>
    <string name="title_Check">CheckPOSt</string>
    <string name="back">Back</string>
    <string name = "post">Post</string>
    <string name="view">ViewEvents</string>
    <string name="schedule">Schedule</string>
    <string name="complaint">Complaints</string>
    <string name="text_complaint">Anything you want to say...</string>
    <string name="submit">Submit</string>
    <string name="noComplaints">There are no complaints</string>
    <string name="logout">Log Out</string>
    <string name="EventName">EventName</string>
    <string name="Detail">Detail</string>
    <string name="comment">Comment</string>
    <string-array name="spinner_program_data">
        <item>Please select a program</item>  <!-- Default unselected item -->
        <item>Specialist</item>
        <item>Major</item>
        <item>Minor</item>
        <!-- more items as needed -->
    </string-array>
    <string-array name="spinner_grade_data">
        <item>Please select a grade</item>  <!-- Default unselected item -->
        <item>A+ (90-100)</item>
        <item>A (85-89)</item>
        <item>A- (80-84)</item>
        <item>B+ (77-79)</item>
        <item>B (73-76)</item>
        <item>B- (70-72)</item>
        <item>C+ (67-69)</item>
        <item>C (63-66)</item>
        <item>C- (60-62)</item>
        <item>D+ (57-59)</item>
        <item>D (53-56)</item>
        <item>D- (50-52)</item>
        <item>F (0-49)</item>
        <!-- more items as needed -->
    </string-array>
    <string name="detail">detail</string>
    <string name="rsvp">RSVP</string>
</resources>