<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_announcement"
        android:icon="@drawable/announcement"
        android:title="@string/Ann" />

    <item
        android:id="@+id/navigation_feedback"
        android:icon="@drawable/feedback"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/events"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_CheckPOSt"
        android:icon="@drawable/check"
        android:title="@string/title_Check" />

    <item
        android:icon="@drawable/logout"
        android:title="@string/logout"
        android:id="@+id/navigation_logout"/>



</menu>