<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_announcement">

    <fragment
        android:id="@+id/navigation_announcement"
        android:name="com.example.b07_project.ui.announcement.AnnouncementFragment"
        android:label="@string/Ann"
        tools:layout="@layout/fragment_announcement" />

    <fragment
        android:id="@+id/navigation_feedback"
        android:name="com.example.b07_project.ui.feedback.FeedbackFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feedbacks" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.b07_project.ui.events.EventsFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_CheckPOSt"
        android:name="com.example.b07_project.ui.checkpost.CheckPOStFragment"
        android:label="@string/title_Check"
        tools:layout="@layout/fragment_checkpost" />
</navigation>